--- a/README.rdoc
+++ b/README.rdoc
@@ -10,4 +10,4 @@ Future functionality:
 
 *Lightbox functionality which allows slideshow viewing of images.
 
-*Mobile design
+*Mobile friendly design
